# autoflow

./: Cargo.toml  Google Keyword Research.automa.json
codegen/: Cargo.toml
codegen/src/: lib.rs  task.rs
codegen/tests/: task.rs
core/: Cargo.toml
core/src/: context.rs  edge.rs  endpoint.rs  extractor.rs  handler.rs  lib.rs  node.rs  planner.rs  task.rs  worker.rs  workflow.rs
core/src/error/: error.rs  macros.rs  mod.rs  status.rs  workflow_error.rs
schedule/: Cargo.toml
schedule/src/: lib.rs  planner.rs  scheduler.rs  task.rs  trigger.rs
src/: commander.rs  defaults.rs  edge.rs  endpoint.rs  engine.rs  enums.rs  exec_param.rs  fetcher.rs  flow.rs  handler.rs  handler2.rs  lib.rs  node.rs  node_manager.rs  node_trait.rs  nodes.json  planner.rs  reactflow.rs  task.rs  task_executor.rs  viewport.rs  worker.rs  workflow.rs  workflow_setting.rs
src/handler/: handler_trait.rs  mod.rs
src/handler/handlers/: end.rs  log.rs  mod.rs  start.rs
src/handlers/: custom.rs  end.rs  mod.rs  start.rs
tests/: test_fetcher.rs  test_node.rs  test_planner.rs  test_test_executor.rs  test_worker.rs
