[package]
name = "autoflow"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["codegen", "core", "schedule"]

[dependencies]
anyhow = "1.0.89"
arrow = "53.0.0"
async-trait = "0.1.83"
nanoid = "0.4.0"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["full", "macros"] }
